logger erweitert